Boxshadows/Alignment und Anpassung Form-Controls für das 12er-Update überarbeitet - bugfix

--- a/src/base/_luxcomponents.scss
+++ b/src/base/_luxcomponents.scss
@@ -166,7 +166,7 @@ lux-card {
 
   .lux-card-content-container {
     overflow-x: hidden;
-    padding: $form-control-margin;
+    padding: $lux-form-control-margin;
     @include alignment-container;
     > * {
       margin-bottom: 0;
